# banana-dev-rs

./: .gitignore  Cargo.toml  justfile
.cargo/: config.toml
src/: banana_api.rs  lib.rs
src/async_client/: mod.rs  tokio_backend.rs
src/sync_client/: mod.rs  ureq_backend.rs
